--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -16,6 +16,4 @@ jobs:
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.1
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-          include:
-            - name: PhpVulnerablePathsInspection
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }
