--- a/qodana.yaml
+++ b/qodana.yaml
@@ -11,6 +11,8 @@ profile:
 #Enable inspections
 #include:
 #  - name: <SomeEnabledInspectionId>
+include:
+  - name: PhpVulnerablePathsInspection
 
 #Disable inspections
 #exclude:
