--- a/.github/workflows/qodana_code_quality.yaml
+++ b/.github/workflows/qodana_code_quality.yaml
@@ -17,3 +17,6 @@ jobs:
         uses: JetBrains/qodana-action@v2024.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+        with:
+          args: --baseline, qodana.sarif.json
+  
